Fix horizontal scroll

--- a/sass/chapter.sass
+++ b/sass/chapter.sass
@@ -359,6 +359,7 @@ figure.cushy
     -webkit-transform: translate3d(0, 0, 0)
 
     @media (min-width: 48em)
+        position: fixed
         left: -100%
         right: -100%
 
